# mini-ai-deploy-pipeline

./: .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml  jetson-nightly.yml
artifacts/: baseline.json  baseline_ci.json  baseline_jetson_ort.json  baseline_real.json  baseline_real_mac_sim.json  baseline_trt.json
deploy/jetson/: benchmark_jetson.sh  benchmark_trtexec.sh  build_trt_engine.sh  check_env.sh  run_backend_matrix.sh  setup_actions_runner.sh  setup_power.sh
ros2_node/: README.md  inference_node.py  package.xml  setup.cfg  setup.py
ros2_node/edge_inference_node/: __init__.py  inference_node.py
ros2_node/launch/: inference.launch.py
ros2_node/resource/: edge_inference_node
scripts/: compare_x86_jetson.sh  run_extended_pipeline.sh  run_pipeline.sh  run_real_data_pipeline.sh
src/: __init__.py  accuracy_compare.py  benchmark.py  benchmark_compare.py  compare_bench_json.py  datasets.py  experiment_grid.py  export_onnx.py  gate_regression.py  infer.py  infer_ort.py  model.py  parity_check.py  parse_trtexec_log.py  quantize_onnx.py  telemetry.py  train.py  utils_time.py
src/backends/: __init__.py  base.py  factory.py  onnxruntime_backend.py  tensorrt_backend.py  tvm_backend.py
tests/: test_backends.py  test_compare_bench_json.py  test_smoke.py
